--- a/1. Introduccion a las series temporales/Python/1_Python_Introducción_a_las_series_temporales.ipynb
+++ b/1. Introduccion a las series temporales/Python/1_Python_Introducción_a_las_series_temporales.ipynb
@@ -23,10 +23,21 @@
       "name": "1. Python - Introducción a las series temporales .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/samluis81/curso-series-temporales/blob/master/1.%20Introduccion%20a%20las%20series%20temporales/Python/1_Python_Introducci%C3%B3n_a_las_series_temporales.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -51,7 +62,7 @@
         "#import seaborn as sns\n",
         "#sns.set()"
       ],
-      "execution_count": 1,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -67,14 +78,40 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "HTTMhg9K8ZB8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "773d161e-75d9-4dc2-f412-c2bfea14c0ec"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "2aZ4hKJkWe9V",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "raw_csv_data = pd.read_csv(\"https://raw.githubusercontent.com/MaddoSaru/curso-series-temporales/master/1.%20Introduccion%20a%20las%20series%20temporales/Python/Index2018.csv\")"
+        "raw_csv_data = pd.read_csv(\"/content/drive/My Drive/EJERCICIOS DEL CURSO DE SERIES DE TIEMPO/1 INTRODUCCION A LAS SERIES TEMPORALES/Index2018.csv\")"
       ],
-      "execution_count": 3,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -87,7 +124,7 @@
       "source": [
         "df_comp = raw_csv_data.copy()"
       ],
-      "execution_count": 5,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -110,12 +147,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "865d10b0-3564-48b1-cb21-38e99433669e"
+        "outputId": "9328210a-9ada-42ac-9935-683b9acb88f2"
       },
       "source": [
         "df_comp.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -203,7 +240,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 27
         }
       ]
     },
@@ -221,7 +258,7 @@
       "source": [
         "df_comp"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +546,7 @@
       "source": [
         "df_comp.isna()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -672,7 +709,7 @@
       "source": [
         "df_comp.isna().sum()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -707,7 +744,7 @@
       "source": [
         "df_comp.spx.isna().sum()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -743,7 +780,7 @@
       "source": [
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -762,7 +799,7 @@
         "df_comp.spx.plot(figsize=(20,5), title = \"S&P500 Prices\")\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -866,7 +903,7 @@
       "source": [
         "import scipy.stats"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -885,7 +922,7 @@
         "plt.title(\"QQ Plot\", size = 24)\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
